# x64rustOs

./: .gitignore  Makefile  README.md  bochsrc  boot.img
bootloader/: Makefile  boot.asm  loader.asm
kernel/: Makefile
kernel/rustos/: Cargo.toml  Makefile  os.json
kernel/rustos/src/: main.rs
rustos/: .gitignore  Cargo.toml  Makefile  head.S  kernel.lds  lld.help  os.json  rustc_env.sh
rustos/src/: lib.rs  main.rs
rustos/src/display/: ascii.rs  mod.rs  screen.rs
