[package]
name = "rustos"
version = "0.1.0"
authors = ["linux"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0"
lazy_static = {version="1",features = ["spin_no_std"]}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target =  "os.json"
