[package]
name = "rustos"
version = "0.1.0"
authors = ["linux"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target =  "os.json"
rustflags=[
	"-C link-arg=-nostartfiles"
]

[unstable]
 build-std = ["core", "compiler_builtins"]
# build-std = ["core", "compiler_builtins", "alloc"]
build-std-features = ["compiler-builtins-mem"]
